--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Do It</title>
+  <title>ToDo</title>
 </head>
 <body>
-  <h1>Today is <%= kindOfDay %></h1>
+  <h1><%= kindOfDay %></h1>
+
+  <ul>
+    <li>Buy Food</li>
+    <li>Cook Food</li>
+    <li>Eat Food</li>
+    <% for(let i=0; i<newListItems.length; i++) { %>
+      <li><%= newListItems[i] %></li>
+    <% } %>
+  </ul>
+
+  <form action="/" method="post">
+    <input type="text" name="newItem">
+    <button type="submit" name="button">Add</button>
+  </form>
 </body>
 </html>
