--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,23 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>ToDo</title>
 </head>
 <body>
-  <h1><%= kindOfDay %></h1>
+  <div class="box" id="heading">
+    <h1><%= kindOfDay %></h1>
+  </div>
 
-  <ul>
-    <li>Buy Food</li>
-    <li>Cook Food</li>
-    <li>Eat Food</li>
+  <div class="box">
     <% for(let i=0; i<newListItems.length; i++) { %>
-      <li><%= newListItems[i] %></li>
+      <div class="item">
+        <input type="checkbox">
+        <p><%= newListItems[i] %></p>
+      </div>
     <% } %>
-  </ul>
+    <form action="/" method="post">
+      <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+      <button type="submit" name="button">+</button>
+    </form>
+  </div>
 
-  <form action="/" method="post">
-    <input type="text" name="newItem">
-    <button type="submit" name="button">Add</button>
-  </form>
 </body>
 </html>
