--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/styles.css">
-  <title>ToDo</title>
-</head>
-<body>
+<%- include('header') -%>
+
   <div class="box" id="heading">
     <h1><%= listTitle %></h1>
   </div>
@@ -25,5 +17,4 @@
     </form>
   </div>
 
-</body>
-</html>
+<%- include('footer') -%>
